Modify the Shopping and Completed list containers to a max-height of 30vh and added an 'overflow' property and set the value to 'auto' to create a fixed container height and allow scrolling. This was done to prevent the containers from growing to large and spilling out of the main UI.

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -468,3 +468,8 @@ input:focus {
     opacity: 0.7;
 }
 
+.sl-list--container, .cl-list--container {
+    overflow: auto;
+    max-height: 30vw;
+}
+
